<resources>
    <string name="app_name">Video Cutter</string>
    <string name="my_studio">My Studio</string>
    <string name="select">Select</string>
    <string name="selected_item">Mục được chọn</string>
    <string name="next">Next</string>
    <string name="adjust_description">Long press to sort the videos</string>
    <string name="home_no_data">No video!</string>
    <string name="home_get_started">Get Started</string>
    <string name="home_see_all">See All</string>
    <string name="start_permission_denied_content">Video Cutter cần yêu cầu được truy cập ảnh, phương tiện và tệp của bạn</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_description">video(s) from your studio.</string>
    <string name="close">Close</string>
    <string name="save_to_library">Save to Library</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="loading">Loading</string>
    <string name="stop">stop</string>
    <string name="setting">Setting</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="video_quality">Video Quality</string>
    <string name="rate_us">Rate Us</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="home">Home</string>
    <string name="select_add">Add(0)</string>
    <string name="video">Video</string>
    <string name="undeveloped_feature">Undeveloped feature!</string>

    // filter
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="original">Original</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>

    // speed
    <string name="speed">Speed</string>
    <string name="_0.75x">0.75x</string>
    <string name="_0.5x">0.5x</string>
    <string name="_0.25x">0.25x</string>
    <string name="_1x">1x</string>
    <string name="_2x">2x</string>
    <string name="_3x">3x</string>
    <string name="_4x">4x</string>
    <string name="permission_not_granted">Permissions are not granted</string>

    // add music
    <string name="itunes">iTunes</string>
    <string name="music_track">Music Track</string>
    <string name="music">Music</string>
    <string name="music_track_no_data">No data!</string>
    <string name="music_track_none">None</string>

    // Crop
    <string name="ratio_custom">Custom</string>
    <string name="ratio_instagram">Instagram</string>
    <string name="ratio_4x5">4x5</string>
    <string name="ratio_5x4">5x4</string>
    <string name="ratio_9x16">9x16</string>
    <string name="ratio_16x9">16x9</string>
    <string name="ratio_3x2">3x2</string>
    <string name="ratio_2x3">2x3</string>
    <string name="ratio_4x3">4x3</string>
    <string name="ratio_3x4">3x4</string>
    <string name="crop">Crop</string>

    // Tool Edit
    <string name="rotate">Rotate</string>
    <string name="cut">Cut</string>

    // Select
    <string name="select_empty_message">You haven\'t created any video yet!</string>

    // My Studio
    <string name="my_studio_empty_message">No video!</string>

    // Flip Rotate
    <string name="flip_and_rotate"><![CDATA[Flip & Rotate]]></string>

    // Cut
    <string name="cut_video_time_start">00:00</string>
    <string name="cut_video_time_end">04:00</string>
    <string name="cut_video_center">Cut</string>
    <string name="cut_video_done">Done</string>
    <string name="cut_video_trim">Trim</string>
    <string name="cut_video_cut_out">Cut Out</string>
</resources>
