<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHomeTitle"
            style="@style/StyleRobotoBoldBlack34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_78"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivHomeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_32"
            android:src="@drawable/ic_black_setting"
            app:layout_constraintBottom_toBottomOf="@id/tvHomeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHomeTitle" />

        <RelativeLayout
            android:id="@+id/rlHome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_40"
            android:background="@drawable/shape_main_gradient_corner_12"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/tvHomeSeeAllMyStudio">

            <ImageView
                android:id="@+id/ivHomeScissors"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_32"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_white_scissors" />

            <TextView
                style="@style/StyleRobotoBoldWhite28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_28"
                android:layout_toEndOf="@id/ivHomeScissors"
                android:text="@string/home_get_started" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvHomeMyStudio"
            style="@style/StyleRobotoBoldBlack22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_studio"
            app:layout_constraintBottom_toBottomOf="@id/tvHomeSeeAllMyStudio"
            app:layout_constraintStart_toStartOf="@id/constHomeGone"
            app:layout_constraintTop_toTopOf="@id/tvHomeSeeAllMyStudio" />

        <TextView
            android:id="@+id/tvHomeSeeAllMyStudio"
            style="@style/StyleRobotoLightPurple18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/home_see_all"
            app:layout_constraintBottom_toTopOf="@id/constHomeGone"
            app:layout_constraintEnd_toEndOf="@id/constHomeGone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyStudioVideoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/constHomeGone"
            app:layout_constraintTop_toTopOf="@id/constHomeGone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constHomeGone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,2:1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
