<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.start.StartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvStartTitle"
            style="@style/StyleRobotoBoldBlack34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_78"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivStartSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_32"
            android:src="@drawable/ic_black_setting"
            app:layout_constraintBottom_toBottomOf="@id/tvStartTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvStartTitle" />

        <RelativeLayout
            android:id="@+id/rlStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_40"
            android:background="@drawable/shape_orange_gradient_corner_12"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/tvStartSeeAllMyStudio">

            <ImageView
                android:id="@+id/ivStartScissors"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_32"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_white_scissors" />

            <TextView
                style="@style/StyleRobotoBoldWhite28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_28"
                android:layout_toEndOf="@id/ivStartScissors"
                android:text="@string/home_get_started" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvStartMyStudio"
            style="@style/StyleRobotoBoldBlack22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_studio"
            app:layout_constraintBottom_toBottomOf="@id/tvStartSeeAllMyStudio"
            app:layout_constraintStart_toStartOf="@id/constStartGone"
            app:layout_constraintTop_toTopOf="@id/tvStartSeeAllMyStudio" />

        <TextView
            android:id="@+id/tvStartSeeAllMyStudio"
            style="@style/StyleRobotoLightPurple18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/home_see_all"
            app:layout_constraintBottom_toTopOf="@id/constStartGone"
            app:layout_constraintEnd_toEndOf="@id/constStartGone" />

        <LinearLayout
            android:id="@+id/llStartNoData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:background="@drawable/shape_gray_bg_corner_4"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/constStartGone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_gray_no_data" />

            <TextView
                style="@style/StyleRobotoSemiBoldGray16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:gravity="center_horizontal"
                android:text="@string/home_no_data" />

        </LinearLayout>

        <com.mobile.videocutter.presentation.widget.recyclerview.CustomRecyclerView
            android:id="@+id/crvStartVideoList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:crv_padding_bottom="@dimen/dimen_20"
            app:crv_padding_end="@dimen/dimen_4"
            app:crv_padding_start="@dimen/dimen_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constStartGone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constStartGone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,2:1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
