<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/flShareContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constShareMainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShareClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/dimen_60"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_20"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/color_gray_50"
                app:layout_constraintTop_toTopOf="@id/tvShareClose" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constShareSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimen_60"
                app:layout_constraintBottom_toTopOf="@id/tvShareClose">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShareSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_60"
                    android:gravity="center_vertical"
                    android:text="@string/save_to_library"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_text_size_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_black_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvShareSave"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/color_gray_50"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/constShareSave" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constShareShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/constShareSave">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShareShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_60"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/dimen_60"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_text_size_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_black_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvShareShare"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
